; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_eval.c_del_menutrans_vars.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_eval.c_del_menutrans_vars.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32*, i64 }
%struct.TYPE_7__ = type { i32 }

@globvarht = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@got_int = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"menutrans_\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @del_menutrans_vars() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = call i32 @hash_lock(%struct.TYPE_6__* @globvarht)
  %4 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @globvarht, i32 0, i32 1), align 8
  %5 = trunc i64 %4 to i32
  store i32 %5, i32* %2, align 4
  %6 = load i32*, i32** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @globvarht, i32 0, i32 0), align 8
  store i32* %6, i32** %1, align 8
  br label %7

7:                                                ; preds = %34, %0
  %8 = load i32, i32* %2, align 4
  %9 = icmp sgt i32 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %7
  %11 = load i32, i32* @got_int, align 4
  %12 = icmp ne i32 %11, 0
  %13 = xor i1 %12, true
  br label %14

14:                                               ; preds = %10, %7
  %15 = phi i1 [ false, %7 ], [ %13, %10 ]
  br i1 %15, label %16, label %37

16:                                               ; preds = %14
  %17 = load i32*, i32** %1, align 8
  %18 = call i32 @HASHITEM_EMPTY(i32* %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %33, label %20

20:                                               ; preds = %16
  %21 = load i32, i32* %2, align 4
  %22 = add nsw i32 %21, -1
  store i32 %22, i32* %2, align 4
  %23 = load i32*, i32** %1, align 8
  %24 = call %struct.TYPE_7__* @HI2DI(i32* %23)
  %25 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i64 @STRNCMP(i32 %26, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 10)
  %28 = icmp eq i64 %27, 0
  br i1 %28, label %29, label %32

29:                                               ; preds = %20
  %30 = load i32*, i32** %1, align 8
  %31 = call i32 @delete_var(%struct.TYPE_6__* @globvarht, i32* %30)
  br label %32

32:                                               ; preds = %29, %20
  br label %33

33:                                               ; preds = %32, %16
  br label %34

34:                                               ; preds = %33
  %35 = load i32*, i32** %1, align 8
  %36 = getelementptr inbounds i32, i32* %35, i32 1
  store i32* %36, i32** %1, align 8
  br label %7

37:                                               ; preds = %14
  %38 = call i32 @hash_unlock(%struct.TYPE_6__* @globvarht)
  ret void
}

declare dso_local i32 @hash_lock(%struct.TYPE_6__*) #1

declare dso_local i32 @HASHITEM_EMPTY(i32*) #1

declare dso_local i64 @STRNCMP(i32, i8*, i32) #1

declare dso_local %struct.TYPE_7__* @HI2DI(i32*) #1

declare dso_local i32 @delete_var(%struct.TYPE_6__*, i32*) #1

declare dso_local i32 @hash_unlock(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
